fix: added docker image as configurable env variable

--- a/bitping/.env.example
+++ b/bitping/.env.example
@@ -1,4 +1,5 @@
 BITPING_EMAIL=your_email_here
 BITPING_PASSWORD=your_password_here
 BITPING_MFA=your_2fa_code_here
+DOCKER_IMAGE=bitping/bitpingd:latest
 # BITPING_VOLUME_PATH=./bitping-data
