--- a/packetshare/docker-compose.yml
+++ b/packetshare/docker-compose.yml
@@ -1,10 +1,8 @@
 services:
   packetshare:
     # Official PacketShare image
-    image: packetshare/packetshare
-
+    image: ${DOCKER_IMAGE:-packetshare/packetshare:latest}
     container_name: packetshare-container
-
     # Command to start the service with email and password.
     # IMPORTANT! Configure environment variables in .env
     command: -accept-tos -email=${PACKETSHARE_EMAIL} -password=${PACKETSHARE_PASSWORD}
