--- a/pawns-app/.env.example
+++ b/pawns-app/.env.example
@@ -9,3 +9,5 @@ IPROYAL_PASSWORD=your_password_here
 
 # A name to identify this device in your IPRoyal control panel
 IPROYAL_DEVICE_NAME=MyDevice
+
+DOCKER_IMAGE=iproyal/pawns-cli:latest
