--- a/presearch/.env.example
+++ b/presearch/.env.example
@@ -1,2 +1,3 @@
 PRESEARCH_REGISTRATION_CODE=your_registration_code_here
+DOCKER_IMAGE=presearch/node:latest
 # PRESEARCH_VOLUME_PATH=./presearch-data
