feat: enhance multi-architecture support and update docker-compose files

--- a/earnfm/docker-compose.yml
+++ b/earnfm/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   earnfm-client:
     # Official EarnFM client image
     image: earnfm/earnfm-client:latest
-
+    env_file:
+      - .env
     container_name: earnfm-client
 
     # Environment variables for EarnFM token
