feat: add resource limits for BitPing, Honeygain, and Pawns.app services in docker-compose files

--- a/bitping/docker-compose.yml
+++ b/bitping/docker-compose.yml
@@ -21,6 +21,12 @@ services:
 
     restart: unless-stopped
 
+    deploy:
+      resources:
+        limits:
+          cpus: '1.5'
+          memory: 256M
+
 volumes:
   bitpingd-volume:
 
